# infinity-autopilot

./: .config  .gitignore  .gitmodules  CMakeLists.txt  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Kconfig  LICENSE  README.md  SECURITY.md  platformio.ini  prj.conf  pyproject.toml  west.yml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
boards/infinity-fc/: infinity-fc.dts  infinity-fc.overlay
boards/infinity_fc/: teensy41.conf  teensy41.overlay
boards/sitl/: native_sim.conf
boards/teensy41/: teensy41.conf  teensy41.overlay
cmake/: kconfig.cmake  module.cmake  params_generation.cmake  platform.cmake  toolchain_sitl.cmake  toolchain_teensy41.cmake
configs/: sitl_defconfig  teensy41_defconfig
docs/: build_commands.md  cmake_commands.md  logging.md  scheduler-2.md  scheduler.md
dts/bindings/: vendor-prefixes.txt
dts/bindings/infinity-autopilot/: bmi088-imu.yaml
lib/: CMakeLists.txt
scripts/simulation/: README.md  run_sitl_infinity.sh
scripts/simulation/gazebo/: README.md  infinity_gazebo_bridge.py  run_gazebo_infinity.sh
src/: FlightController.cpp  FlightController.hpp  main.cpp
src/SRIMB/: README.md
src/config/: board_configs.h  parameters.h
src/drivers/: CMakeLists.txt  HAL.cpp  HAL.hpp  HAL_configs.hpp  Kconfig
src/drivers/gps/: Gps.hpp
src/drivers/hw/: CMakeLists.txt  Kconfig
src/drivers/hw/gps/: Kconfig
src/drivers/hw/imu/: CMakeLists.txt  Kconfig
src/drivers/hw/imu/Bmi088_driver/: Bmi088_acc_driver.hpp  Bmi088_driver.cpp  Bmi088_driver.hpp  Bmi088_gyro_driver.hpp  CMakeLists.txt  Kconfig
src/drivers/hw/imu/ICM42688P_driver/: CMakeLists.txt  ICM42688P_driver.cpp  ICM42688P_driver.hpp  Kconfig
src/drivers/imu/: Imu.h
src/drivers/lidar/: Lidar.hpp
src/drivers/sitl/: CMakeLists.txt  Kconfig
src/drivers/sitl/radio/: CMakeLists.txt  Kconfig  Radio_sitl.cpp  Radio_sitl.hpp
src/entry/: CMakeLists.txt  FlightController.cpp  FlightController.hpp  entry.cpp  entry_teensy.cpp
src/filters/: CMakeLists.txt  ImuLpfFilter.hpp
src/filters/BiquadFilter/: BiquadFilter.hpp
src/filters/lpf/: CMakeLists.txt  ImuLpfFilter.hpp
src/filters/lpf/ExpFilter/: ExpFilter.hpp
src/hal/: CMakeLists.txt  HAL.cpp  HAL.hpp  Kconfig
src/hal/SITL/: HAL_sitl.cpp  HAL_sitl.hpp  Kconfig
src/hal/SITL/lib/: README
src/hal/teensy/: HAL_Teensy.cpp  HAL_Teensy.hpp  Kconfig
src/hal/teensy/cores/: CMakeLists.txt
src/hal/teensy/cores/teensy4/: CMakeLists.txt  IntervalTimer.h
src/hal/teensy/cores/teensy4/util/: atomic.h
src/hal/teensy/drivers/: note.txt
src/hal/teensy/drivers/gps/: Gps.cpp  Gps.hpp  Kconfig
src/hal/teensy/drivers/gps/Bn280_driver/: Bn280_driver.cpp  Bn280_driver.hpp  CMakeLists.txt  Kconfig
src/hal/teensy/drivers/imu/: Imu.cpp  Imu.h  Kconfig
src/hal/teensy/drivers/imu/Bmi088_driver/: Bmi088_driver.cpp  Bmi088_driver.hpp  CMakeLists.txt  Kconfig
src/hal/teensy/drivers/imu/ICM42688P_driver/: ICM42688P_driver.cpp  ICM42688P_driver.hpp
src/hal/teensy/drivers/lidar/: Lidar.cpp  Lidar.hpp
src/hal/teensy/drivers/lidar/TFLuna_driver/: TFLuna_driver.cpp  TFLuna_driver.hpp
src/hal/teensy/drivers/mag/: Mag.cpp  Mag.hpp
src/hal/teensy/drivers/motor/: Motor.cpp  Motor.hpp
src/hal/teensy/drivers/sdLogger/: SDLogger.cpp  SDLogger.hpp
src/hal/teensy/lib/: README
src/hal/teensy/lib/BMI088/: BMI088.cpp
src/hal/teensy/lib/HMC5883l/: HMC5883l.cpp  HMC5883l.h
src/hal/teensy/lib/TFMPlus/: TFMPlus.cpp
src/hal/teensy/lib/TinyGPSPlus/: CMakeLists.txt  TinyGPS++.cpp  TinyGPSPlus.h
src/middlewares/SRIMB/: CMakeLists.txt  SRIMB.hpp  SRIMBSub.hpp  SRIMBWorkItemSub.hpp  srimb_topic.hpp
src/modules/: CMakeLists.txt  IModule.hpp  Kconfig  Module.hpp
src/modules/EKF/: CMakeLists.txt  Ekf.cpp  Ekf.hpp  module.yaml
src/modules/EKF/python/: code_generation.py  ekf_derivation.py
src/modules/ImuManager/: CMakeLists.txt  ImuManager.cpp  ImuManager.hpp
src/modules/Logger/: CMakeLists.txt  Kconfig  Logger.cpp  Logger.hpp  LoggerMsgs.hpp
src/modules/imu_manager/: CMakeLists.txt  ImuManager.cpp  ImuManager.hpp  ImuManagerTask.hpp
src/modules/imu_manager/imu_preprocessor/: ImuPreprocessor.hpp
src/modules/logger/: CMakeLists.txt  Kconfig  Logger.cpp  Logger.hpp  LoggerMsgs.hpp  LoggerTask.hpp  SDWriter.hpp
src/modules/module_test1/: CMakeLists.txt  Test1.hpp
src/modules/module_test2/: CMakeLists.txt  Test2.cpp  Test2.hpp
src/modules/telemetry/: CMakeLists.txt
src/scheduler/: CMakeLists.txt  ITask.hpp  Kconfig  PeriodicTask.hpp  PeriodicWork.hpp  Scheduler.cpp  Scheduler.hpp  TTCEScheduler.cpp  TTCEScheduler.hpp  TTCScheduler.h  WorkItem.hpp  WorkItemDelayable.hpp  WorkQueue.hpp  notes.md
src/utils/: CMakeLists.txt  Convertions.hpp  Quaternion.h  Vector3f.h  uav_data.hpp  uav_types.hpp
src/utils/Logger/: Logger.cpp  Logger.hpp  LoggerMsgs.hpp
src/utils/params_manager/: CMakeLists.txt  module_params.hpp  param_manager.cpp  param_manager.hpp
src/utils/ringbuffer/: RingBuffer.hpp  RingBufferTimestamp.cpp  RingBufferTimestamp.hpp  SPSCRingBuffer.hpp
src/utils/signal_filters/lpf/: ImuLpfFilter.hpp
src/utils/signal_filters/lpf/BiquadFilter/: BiquadFilter.hpp
src/utils/srimb_topics/: CMakeLists.txt  gps_topic.cpp  gps_topic.hpp  imu_topic.cpp  imu_topic.hpp
src/utils/srimb_topics/gps_topic/: GpsData.hpp  gps_topic.hpp
src/utils/srimb_topics/imu_topic/: ImuData.hpp  imu_topic.hpp
src/utils/srimb_topics/lidar_topic/: LidarData.hpp  lidar_topic.cpp  lidar_topic.hpp
